--- a/index.html
+++ b/index.html
@@ -3,18 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nerver Indo Roleplay • Premium SA-MP Server</title>
+  <title>Nerver Indo Roleplay</title>
+  <meta name="description" content="Server SA-MP Roleplay Indonesia — Realistis, Stabil, dan Komunitas Aktif." />
+  
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@700;800&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  
+  <!-- Icons -->
+  <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css " />
+
   <style>
+    /* ========== GLOBAL ========== */
     :root {
+      --blue: #0077ff;
       --blue-light: #00f3ff;
-      --blue-main: #0077ff;
-      --blue-dark: #004080;
-      --bg-dark: #0a0a0f;
-      --bg-card: #0f0f16;
-      --text-white: #ffffff;
-      --text-gray: #b0b0c0;
+      --blue-glow: rgba(0, 243, 255, 0.4);
+      --black: #0a0a0f;
+      --card-bg: #0f0f16;
+      --text: #ffffff;
+      --text-muted: #b0b0c0;
+      --border: rgba(0, 119, 255, 0.2);
     }
 
     * {
@@ -24,32 +32,83 @@
     }
 
     body {
-      background-color: var(--bg-dark);
-      color: var(--text-white);
+      background-color: var(--black);
+      color: var(--text);
       font-family: 'Inter', sans-serif;
       line-height: 1.6;
-      overflow-x: hidden;
+      scroll-behavior: smooth;
     }
 
-    /* Header */
+    h1, h2, h3 {
+      font-family: 'Playfair Display', serif;
+      font-weight: 800;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    .container {
+      width: 100%;
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 0 20px;
+    }
+
+    .btn {
+      display: inline-block;
+      background: linear-gradient(90deg, var(--blue), var(--blue-light));
+      color: #000;
+      font-weight: 700;
+      padding: 12px 32px;
+      border-radius: 50px;
+      font-size: 1.05rem;
+      box-shadow: 0 4px 15px var(--blue-glow);
+      transition: all 0.3s ease;
+    }
+
+    .btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 6px 25px rgba(0, 243, 255, 0.6);
+    }
+
+    section {
+      padding: 100px 0;
+    }
+
+    .section-title {
+      text-align: center;
+      font-size: 2.4rem;
+      margin-bottom: 50px;
+      background: linear-gradient(90deg, var(--blue-light), #fff);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+    }
+
+    /* ========== HEADER ========== */
     header {
-      padding: 24px 5%;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      padding: 20px 0;
+      background: rgba(8, 8, 12, 0.9);
+      backdrop-filter: blur(10px);
+      z-index: 1000;
+      border-bottom: 1px solid var(--border);
+    }
+
+    .header-content {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background: rgba(8, 8, 12, 0.85);
-      backdrop-filter: blur(10px);
-      position: fixed;
-      width: 100%;
-      z-index: 1000;
-      border-bottom: 1px solid rgba(0, 119, 255, 0.2);
     }
 
     .logo {
-      font-family: 'Playfair Display', serif;
-      font-weight: 800;
       font-size: 1.8rem;
-      background: linear-gradient(90deg, var(--blue-light), var(--blue-main));
+      font-weight: 800;
+      background: linear-gradient(90deg, var(--blue-light), var(--blue));
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
@@ -57,179 +116,136 @@
 
     nav ul {
       display: flex;
-      gap: 28px;
+      gap: 24px;
       list-style: none;
     }
 
     nav a {
-      color: var(--text-gray);
-      text-decoration: none;
+      color: var(--text-muted);
       font-weight: 600;
-      font-size: 1.02rem;
-      transition: color 0.25s ease;
+      transition: color 0.2s;
     }
 
     nav a:hover, nav a.active {
       color: var(--blue-light);
     }
 
-    /* Hero */
+    /* ========== HERO ========== */
     .hero {
       height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      text-align: center;
-      background: linear-gradient(rgba(10, 10, 15, 0.85), rgba(10, 10, 15, 0.9)), url('https://images.wallpaperscraft.com/image/single/gta_san_andreas_city_night_1312728_1920x1080.jpg');
+      background: linear-gradient(rgba(10, 10, 15, 0.85), rgba(10, 10, 15, 0.95)),
+                  url('https://images.wallpaperscraft.com/image/single/gta_san_andreas_city_night_1312728_1920x1080.jpg');
       background-size: cover;
       background-position: center;
-      padding: 0 20px;
-    }
-
-    .hero-content {
-      max-width: 800px;
-    }
-
-    .hero h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 4.2rem;
-      font-weight: 800;
-      margin-bottom: 16px;
-      background: linear-gradient(90deg, var(--blue-light), #ffffff);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-      text-shadow: 0 0 20px rgba(0, 243, 255, 0.3);
-    }
-
-    .hero p {
-      font-size: 1.25rem;
-      color: var(--text-gray);
-      margin-bottom: 32px;
-    }
-
-    .btn {
-      display: inline-block;
-      padding: 14px 36px;
-      background: linear-gradient(90deg, var(--blue-main), var(--blue-light));
-      color: #000;
-      font-weight: 700;
-      border-radius: 50px;
-      text-decoration: none;
-      font-size: 1.1rem;
-      transition: all 0.3s ease;
-      box-shadow: 0 0 20px rgba(0, 243, 255, 0.4);
-    }
-
-    .btn:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 6px 25px rgba(0, 243, 255, 0.7);
-    }
-
-    /* Sections */
-    .section {
-      max-width: 1000px;
-      margin: 100px auto;
-      padding: 0 20px;
-      opacity: 0;
-      transform: translateY(20px);
-      transition: opacity 0.8s ease, transform 0.8s ease;
-    }
-
-    .section.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    .section h2 {
-      font-family: 'Playfair Display', serif;
-      font-size: 2.4rem;
-      margin-bottom: 30px;
-      color: var(--blue-light);
       text-align: center;
+      padding: 0 20px;
     }
 
+    .hero-content h1 {
+      font-size: 4rem;
+      margin-bottom: 20px;
+      text-shadow: 0 0 20px rgba(0, 243, 255, 0.4);
+    }
+
+    .hero-content p {
+      font-size: 1.2rem;
+      color: var(--text-muted);
+      max-width: 700px;
+      margin: 0 auto 30px;
+    }
+
+    /* ========== CARDS ========== */
     .cards {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 28px;
       margin-top: 40px;
     }
 
     .card {
-      background: var(--bg-card);
-      border: 1px solid rgba(0, 119, 255, 0.2);
+      background: var(--card-bg);
+      border: 1px solid var(--border);
       border-radius: 16px;
-      padding: 28px;
+      padding: 30px 20px;
       text-align: center;
-      transition: all 0.4s ease;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+      transition: all 0.35s ease;
     }
 
     .card:hover {
-      transform: translateY(-8px);
+      transform: translateY(-6px);
       border-color: var(--blue-light);
-      box-shadow: 0 0 25px rgba(0, 243, 255, 0.25);
+      box-shadow: 0 8px 20px rgba(0, 243, 255, 0.2);
     }
 
     .card i {
       font-size: 2.2rem;
       color: var(--blue-light);
-      margin-bottom: 18px;
+      margin-bottom: 16px;
     }
 
     .card h3 {
-      font-size: 1.4rem;
-      margin-bottom: 14px;
-      color: white;
+      font-size: 1.3rem;
+      margin-bottom: 12px;
     }
 
-    .card p {
-      color: var(--text-gray);
+    .card p, .card a {
+      color: var(--text-muted);
       font-size: 0.95rem;
     }
 
+    .card a:hover {
+      text-decoration: underline;
+    }
+
+    /* ========== STATUS BAR ========== */
     .status-bar {
       background: rgba(15, 15, 22, 0.7);
-      border: 1px solid rgba(0, 243, 255, 0.2);
+      border: 1px solid var(--border);
       border-radius: 12px;
       padding: 20px;
-      text-align: center;
-      margin: 40px 0;
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
       flex-wrap: wrap;
-      gap: 15px;
+      gap: 20px;
+      margin: 40px auto;
+      max-width: 800px;
     }
 
     .status-item {
+      display: flex;
+      align-items: center;
+      gap: 8px;
       font-size: 1rem;
+      color: var(--text-muted);
     }
 
-    .status-dot {
-      display: inline-block;
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
+    .dot {
+      width: 10px;
+      height: 10px;
       background: #00ff40;
-      margin-right: 8px;
+      border-radius: 50%;
     }
 
+    /* ========== FOOTER ========== */
     footer {
       text-align: center;
-      padding: 40px 20px;
-      color: var(--text-gray);
+      padding: 40px 0;
+      color: var(--text-muted);
       font-size: 0.95rem;
       border-top: 1px solid rgba(255, 255, 255, 0.05);
-      margin-top: 60px;
     }
 
+    /* ========== RESPONSIVE ========== */
     @media (max-width: 768px) {
-      .hero h1 { font-size: 3rem; }
-      .hero p { font-size: 1.05rem; }
-      nav ul { gap: 18px; }
+      .hero-content h1 { font-size: 2.8rem; }
+      .hero-content p { font-size: 1.05rem; }
+      nav ul { gap: 16px; }
       .logo { font-size: 1.5rem; }
-      .section { margin: 70px auto; }
+      section { padding: 70px 0; }
+      .section-title { font-size: 2rem; }
     }
   </style>
 </head>
@@ -237,16 +253,18 @@
 
   <!-- Header -->
   <header>
-    <div class="logo">NERVER INDO</div>
-    <nav>
-      <ul>
-        <li><a href="#home" class="active">Beranda</a></li>
-        <li><a href="#about">Tentang</a></li>
-        <li><a href="#features">Fitur</a></li>
-        <li><a href="#join">Bergabung</a></li>
-        <li><a href="#contact">Kontak</a></li>
-      </ul>
-    </nav>
+    <div class="container header-content">
+      <div class="logo">NERVER INDO</div>
+      <nav>
+        <ul>
+          <li><a href="#home" class="active">Beranda</a></li>
+          <li><a href="#about">Tentang</a></li>
+          <li><a href="#features">Fitur</a></li>
+          <li><a href="#join">Bergabung</a></li>
+          <li><a href="#contact">Kontak</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <!-- Hero -->
@@ -258,103 +276,139 @@
     </div>
   </section>
 
-  <!-- About -->
-  <section class="section" id="about">
-    <h2>Tentang Kami</h2>
-    <p style="text-align:center; color:var(--text-gray); max-width:700px; margin:0 auto;">
-      Didirikan pada 2025, Nerver Indo Roleplay hadir untuk memberikan pengalaman roleplay berkualitas tinggi di Indonesia.
-      Kami menggabungkan sistem modern, aturan ketat, dan dukungan teknis 24/7 demi menjaga kualitas permainan.
-    </p>
-  </section>
-
-  <!-- Features -->
-  <section class="section" id="features">
-    <h2>Fitur Unggulan</h2>
-    <div class="cards">
-      <div class="card">
-        <i class="fas fa-shield-alt"></i>
-        <h3>Anti-Cheat</h3>
-        <p>Sistem proteksi canggih melawan cheat, exploit, dan macro.</p>
-      </div>
-      <div class="card">
-        <i class="fas fa-sync-alt"></i>
-        <h3>Real-Time Sync</h3>
-        <p>Data karakter, inventaris, dan ekonomi selalu aman dan sinkron.</p>
-      </div>
-      <div class="card">
-        <i class="fas fa-comments"></i>
-        <h3>Komunitas Aktif</h3>
-        <p>Bergabunglah dengan ratusan pemain di grup WhatsApp resmi.</p>
-      </div>
-    </div>
-
-    <!-- Server Status -->
-    <div class="status-bar">
-      <div class="status-item"><span class="status-dot"></span> Server Online</div>
-      <div class="status-item">📍 IP: <strong>152.42.220.33:2000</strong></div>
-      <div class="status-item">👥 Pemain: <strong>Live</strong></div>
+  <!-- Tentang -->
+  <section id="about">
+    <div class="container">
+      <h2 class="section-title">Tentang Kami</h2>
+      <p style="text-align:center; color:var(--text-muted); max-width:700px; margin:0 auto;">
+        Didirikan pada 2025, Nerver Indo Roleplay hadir untuk memberikan pengalaman roleplay berkualitas tinggi di Indonesia.
+        Kami menggabungkan sistem modern, aturan ketat, dan dukungan teknis 24/7 demi menjaga kualitas permainan.
+      </p>
     </div>
   </section>
 
-  <!-- Join -->
-  <section class="section" id="join">
-    <h2>Cara Bergabung</h2>
-    <div class="cards">
-      <div class="card">
-        <i class="fas fa-download"></i>
-        <h3>Instal SA-MP</h3>
-        <p>Pastikan Anda memiliki SA-MP 0.3.7 dan GTA San Andreas original.</p>
+  <!-- Fitur -->
+  <section id="features">
+    <div class="container">
+      <h2 class="section-title">Fitur Unggulan</h2>
+      <div class="cards">
+        <div class="card">
+          <i class="fas fa-shield-alt"></i>
+          <h3>Anti-Cheat</h3>
+          <p>Sistem proteksi canggih melawan cheat, exploit, dan macro.</p>
+        </div>
+        <div class="card">
+          <i class="fas fa-sync-alt"></i>
+          <h3>Real-Time Sync</h3>
+          <p>Data karakter, inventaris, dan ekonomi selalu aman dan sinkron.</p>
+        </div>
+        <div class="card">
+          <i class="fab fa-whatsapp"></i>
+          <h3>Komunitas Aktif</h3>
+          <p><a href="https://chat.whatsapp.com/CVmKiCAgCDk7XPD3KOqQBV" target="_blank">Grup WhatsApp Resmi</a></p>
+        </div>
       </div>
-      <div class="card">
-        <i class="fas fa-sign-in-alt"></i>
-        <h3>Masukkan IP</h3>
-        <p><code>152.42.220.33:2000</code></p>
+
+      <div class="status-bar">
+        <div class="status-item"><span class="dot"></span> Server Online</div>
+        <div class="status-item">IP: <strong>152.42.220.33:2000</strong></div>
+        <div class="status-item">Versi: SA-MP 0.3.7</div>
       </div>
-      <div class="card">
-        <i class="fab fa-whatsapp"></i>
-        <h3>Join Komunitas</h3>
-        <p><a href="https://chat.whatsapp.com/CVmKiCAgCDk7XPD3KOqQBV" target="_blank" style="color:var(--blue-light); text-decoration: none;">Grup WhatsApp Resmi</a></p>
-      </div>
-    </div>
-    <div style="text-align:center; margin-top:30px;">
-      <a href="https://wa.me/6285191923519" class="btn" style="padding:12px 32px; font-size:1rem;">Hubungi Admin</a>
     </div>
   </section>
 
-  <!-- Contact -->
-  <section class="section" id="contact">
-    <h2>Kontak Admin</h2>
-    <p style="text-align:center; color:var(--text-gray);">
-      Butuh bantuan? Hubungi admin via WhatsApp:<br>
-      <a href="https://wa.me/6285191923519" target="_blank" style="color:var(--blue-light); font-weight:600; text-decoration: none;">
-        +62 851-9192-3519
-      </a>
-    </p>
+  <!-- Bergabung -->
+  <section id="join">
+    <div class="container">
+      <h2 class="section-title">Cara Bergabung</h2>
+      <div class="cards">
+        <div class="card">
+          <i class="fas fa-download"></i>
+          <h3>Instal Game</h3>
+          <p>Gunakan SA-MP 0.3.7 + GTA San Andreas original.</p>
+        </div>
+        <div class="card">
+          <i class="fas fa-sign-in-alt"></i>
+          <h3>Masukkan IP</h3>
+          <p><code>152.42.220.33:2000</code></p>
+        </div>
+        <div class="card">
+          <i class="fas fa-copy"></i>
+          <h3>Salin IP</h3>
+          <button id="copyBtn" class="btn" style="padding:8px 20px; font-size:0.95rem; margin-top:10px;">Salin IP</button>
+        </div>
+      </div>
+      <div style="text-align:center; margin-top:40px;">
+        <a href="https://wa.me/6285191923519" class="btn">Hubungi Admin</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Kontak -->
+  <section id="contact">
+    <div class="container">
+      <h2 class="section-title">Kontak</h2>
+      <p style="text-align:center; color:var(--text-muted);">
+        Ingin bertanya atau butuh bantuan?<br>
+        <a href="https://wa.me/6285191923519" style="color:var(--blue-light); font-weight:600;">
+          +62 851-9192-3519
+        </a>
+      </p>
+    </div>
   </section>
 
   <!-- Footer -->
   <footer>
-    &copy; 2025 Nerver Indo Roleplay. All rights reserved.<br>
-    Official SA-MP Indonesia Roleplay Server • Powered by Nerver Network
+    &copy; 2025 Nerver Indo Roleplay — All Rights Reserved.<br>
+    Official SA-MP Roleplay Server • Indonesia
   </footer>
 
   <script>
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('visible');
+    // Smooth Scroll & Active Nav
+    document.querySelectorAll('a[href^="#"]').forEach(link => {
+      link.addEventListener('click', function(e) {
+        e.preventDefault();
+        const target = document.querySelector(this.getAttribute('href'));
+        if (target) {
+          window.scrollTo({
+            top: target.offsetTop - 80,
+            behavior: 'smooth'
+          });
         }
       });
-    }, { threshold: 0.1 });
+    });
 
-    document.querySelectorAll('.section').forEach(sec => observer.observe(sec));
+    // Copy IP
+    document.getElementById('copyBtn').addEventListener('click', async () => {
+      const ip = '152.42.220.33:2000';
+      try {
+        await navigator.clipboard.writeText(ip);
+        const btn = document.getElementById('copyBtn');
+        const original = btn.textContent;
+        btn.textContent = 'Disalin!';
+        setTimeout(() => btn.textContent = original, 2000);
+      } catch (err) {
+        alert('Gagal menyalin. Silakan salin manual: ' + ip);
+      }
+    });
 
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function(e) {
-        e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-          behavior: 'smooth'
-        });
+    // Nav active on scroll (optional)
+    window.addEventListener('scroll', () => {
+      const sections = document.querySelectorAll('section');
+      const navLinks = document.querySelectorAll('nav a');
+      let current = '';
+      sections.forEach(section => {
+        const sectionTop = section.offsetTop;
+        const sectionHeight = section.clientHeight;
+        if (pageYOffset >= sectionTop - 100) {
+          current = section.getAttribute('id');
+        }
+      });
+      navLinks.forEach(link => {
+        link.classList.remove('active');
+        if (link.getAttribute('href') === `#${current}`) {
+          link.classList.add('active');
+        }
       });
     });
   </script>
