--- a/index.html
+++ b/index.html
@@ -10,32 +10,33 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@700;800&display=swap" rel="stylesheet" />
   
   <!-- Icons -->
-  <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css " />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
-    /* ========== GLOBAL ========== */
+    /* ========== VARIABLES ========== */
     :root {
       --blue: #0077ff;
-      --blue-light: #00f3ff;
-      --blue-glow: rgba(0, 243, 255, 0.4);
-      --black: #0a0a0f;
-      --card-bg: #0f0f16;
-      --text: #ffffff;
-      --text-muted: #b0b0c0;
-      --border: rgba(0, 119, 255, 0.2);
+      --cyan: #00f3ff;
+      --glow: rgba(0, 243, 255, 0.35);
+      --dark: #0a0a0f;
+      --darker: #07070c;
+      --card: #0f0f16;
+      --white: #ffffff;
+      --gray: #a0a0b0;
+      --border: rgba(0, 119, 255, 0.15);
     }
 
-    * {
-      margin: 0;
-      padding: 0;
+    /* ========== RESET & BASE ========== */
+    *, *::before, *::after {
       box-sizing: border-box;
     }
 
     body {
-      background-color: var(--black);
-      color: var(--text);
+      margin: 0;
+      background-color: var(--dark);
+      color: var(--white);
       font-family: 'Inter', sans-serif;
-      line-height: 1.6;
+      line-height: 1.7;
       scroll-behavior: smooth;
     }
 
@@ -51,64 +52,56 @@
 
     .container {
       width: 100%;
-      max-width: 1000px;
+      max-width: 1080px;
       margin: 0 auto;
-      padding: 0 20px;
+      padding: 0 24px;
     }
 
+    /* ========== BUTTON ========== */
     .btn {
-      display: inline-block;
-      background: linear-gradient(90deg, var(--blue), var(--blue-light));
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      background: linear-gradient(90deg, var(--blue), var(--cyan));
       color: #000;
       font-weight: 700;
-      padding: 12px 32px;
-      border-radius: 50px;
       font-size: 1.05rem;
-      box-shadow: 0 4px 15px var(--blue-glow);
-      transition: all 0.3s ease;
+      padding: 14px 36px;
+      border-radius: 60px;
+      transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      box-shadow: 0 6px 20px var(--glow);
+      border: none;
+      cursor: pointer;
     }
 
     .btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 6px 25px rgba(0, 243, 255, 0.6);
-    }
-
-    section {
-      padding: 100px 0;
-    }
-
-    .section-title {
-      text-align: center;
-      font-size: 2.4rem;
-      margin-bottom: 50px;
-      background: linear-gradient(90deg, var(--blue-light), #fff);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
+      transform: translateY(-4px);
+      box-shadow: 0 10px 30px rgba(0, 243, 255, 0.55);
     }
 
     /* ========== HEADER ========== */
     header {
       position: fixed;
       top: 0;
+      left: 0;
       width: 100%;
-      padding: 20px 0;
-      background: rgba(8, 8, 12, 0.9);
-      backdrop-filter: blur(10px);
-      z-index: 1000;
+      z-index: 2000;
+      padding: 22px 0;
+      background: rgba(7, 7, 12, 0.92);
+      backdrop-filter: blur(12px);
       border-bottom: 1px solid var(--border);
     }
 
-    .header-content {
+    .header-inner {
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
 
     .logo {
-      font-size: 1.8rem;
-      font-weight: 800;
-      background: linear-gradient(90deg, var(--blue-light), var(--blue));
+      font-size: 1.9rem;
+      background: linear-gradient(90deg, var(--cyan), var(--blue));
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
@@ -116,18 +109,37 @@
 
     nav ul {
       display: flex;
-      gap: 24px;
       list-style: none;
+      gap: 32px;
     }
 
     nav a {
-      color: var(--text-muted);
+      color: var(--gray);
       font-weight: 600;
-      transition: color 0.2s;
+      font-size: 1.02rem;
+      position: relative;
+      padding: 4px 0;
     }
 
-    nav a:hover, nav a.active {
-      color: var(--blue-light);
+    nav a::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background: var(--cyan);
+      transition: width 0.3s ease;
+    }
+
+    nav a:hover,
+    nav a.active {
+      color: var(--cyan);
+    }
+
+    nav a:hover::after,
+    nav a.active::after {
+      width: 100%;
     }
 
     /* ========== HERO ========== */
@@ -136,7 +148,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(rgba(10, 10, 15, 0.85), rgba(10, 10, 15, 0.95)),
+      background: linear-gradient(rgba(7, 7, 12, 0.88), rgba(7, 7, 12, 0.95)),
                   url('https://images.wallpaperscraft.com/image/single/gta_san_andreas_city_night_1312728_1920x1080.jpg');
       background-size: cover;
       background-position: center;
@@ -144,56 +156,88 @@
       padding: 0 20px;
     }
 
-    .hero-content h1 {
-      font-size: 4rem;
-      margin-bottom: 20px;
-      text-shadow: 0 0 20px rgba(0, 243, 255, 0.4);
+    .hero-content {
+      max-width: 800px;
     }
 
-    .hero-content p {
-      font-size: 1.2rem;
-      color: var(--text-muted);
-      max-width: 700px;
-      margin: 0 auto 30px;
+    .hero h1 {
+      font-size: 4.2rem;
+      margin-bottom: 24px;
+      text-shadow: 0 0 25px rgba(0, 243, 255, 0.4);
     }
 
-    /* ========== CARDS ========== */
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 28px;
-      margin-top: 40px;
+    .hero p {
+      font-size: 1.25rem;
+      color: var(--gray);
+      margin-bottom: 36px;
     }
 
-    .card {
-      background: var(--card-bg);
-      border: 1px solid var(--border);
-      border-radius: 16px;
-      padding: 30px 20px;
+    /* ========== SECTIONS ========== */
+    section {
+      padding: 120px 0;
+    }
+
+    .section-header {
       text-align: center;
-      transition: all 0.35s ease;
+      margin-bottom: 60px;
     }
 
-    .card:hover {
-      transform: translateY(-6px);
-      border-color: var(--blue-light);
-      box-shadow: 0 8px 20px rgba(0, 243, 255, 0.2);
-    }
-
-    .card i {
-      font-size: 2.2rem;
-      color: var(--blue-light);
+    .section-title {
+      font-size: 2.6rem;
+      background: linear-gradient(90deg, var(--cyan), var(--white));
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
       margin-bottom: 16px;
     }
 
-    .card h3 {
-      font-size: 1.3rem;
-      margin-bottom: 12px;
+    .section-subtitle {
+      color: var(--gray);
+      max-width: 650px;
+      margin: 0 auto;
+      font-size: 1.05rem;
     }
 
-    .card p, .card a {
-      color: var(--text-muted);
-      font-size: 0.95rem;
+    /* ========== CARDS ========== */
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 32px;
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: 20px;
+      padding: 36px 28px;
+      text-align: center;
+      transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+      border: 1px solid var(--border);
+    }
+
+    .card:hover {
+      transform: translateY(-8px);
+      border-color: rgba(0, 243, 255, 0.4);
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
+    }
+
+    .card-icon {
+      font-size: 2.4rem;
+      margin-bottom: 20px;
+      background: linear-gradient(90deg, var(--blue), var(--cyan));
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+    }
+
+    .card h3 {
+      font-size: 1.35rem;
+      margin-bottom: 14px;
+    }
+
+    .card p,
+    .card a {
+      color: var(--gray);
+      font-size: 0.98rem;
     }
 
     .card a:hover {
@@ -201,51 +245,65 @@
     }
 
     /* ========== STATUS BAR ========== */
-    .status-bar {
-      background: rgba(15, 15, 22, 0.7);
-      border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 20px;
+    .status {
+      background: var(--card);
+      border-radius: 20px;
+      padding: 24px;
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 20px;
-      margin: 40px auto;
-      max-width: 800px;
+      gap: 24px;
+      max-width: 850px;
+      margin: 50px auto 0;
+      border: 1px solid var(--border);
     }
 
     .status-item {
       display: flex;
       align-items: center;
-      gap: 8px;
-      font-size: 1rem;
-      color: var(--text-muted);
+      gap: 10px;
+      font-size: 1.05rem;
+      color: var(--gray);
     }
 
-    .dot {
+    .status-dot {
       width: 10px;
       height: 10px;
       background: #00ff40;
       border-radius: 50%;
+      box-shadow: 0 0 8px #00ff40;
     }
 
     /* ========== FOOTER ========== */
     footer {
+      padding: 60px 0 40px;
       text-align: center;
-      padding: 40px 0;
-      color: var(--text-muted);
+      color: var(--gray);
       font-size: 0.95rem;
-      border-top: 1px solid rgba(255, 255, 255, 0.05);
+      border-top: 1px solid rgba(255, 255, 255, 0.04);
+    }
+
+    /* ========== ANIMATIONS ========== */
+    .fade-in {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: opacity 0.8s ease, transform 0.8s ease;
+    }
+
+    .fade-in.visible {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     /* ========== RESPONSIVE ========== */
     @media (max-width: 768px) {
-      .hero-content h1 { font-size: 2.8rem; }
-      .hero-content p { font-size: 1.05rem; }
-      nav ul { gap: 16px; }
-      .logo { font-size: 1.5rem; }
-      section { padding: 70px 0; }
-      .section-title { font-size: 2rem; }
+      .hero h1 { font-size: 2.9rem; }
+      .hero p { font-size: 1.1rem; }
+      nav ul { gap: 20px; }
+      .logo { font-size: 1.6rem; }
+      section { padding: 80px 0; }
+      .section-title { font-size: 2.1rem; }
+      .btn { padding: 12px 28px; font-size: 1rem; }
     }
   </style>
 </head>
@@ -253,7 +311,7 @@
 
   <!-- Header -->
   <header>
-    <div class="container header-content">
+    <div class="container header-inner">
       <div class="logo">NERVER INDO</div>
       <nav>
         <ul>
@@ -272,45 +330,54 @@
     <div class="hero-content">
       <h1>Nerver Indo Roleplay</h1>
       <p>Server SA-MP Roleplay Indonesia dengan sistem realistis, komunitas aktif, dan performa tinggi.</p>
-      <a href="#join" class="btn">GABUNG SEKARANG</a>
+      <a href="#join" class="btn">
+        <i class="fas fa-arrow-right"></i> Gabung Sekarang
+      </a>
     </div>
   </section>
 
   <!-- Tentang -->
-  <section id="about">
+  <section id="about" class="fade-in">
     <div class="container">
-      <h2 class="section-title">Tentang Kami</h2>
-      <p style="text-align:center; color:var(--text-muted); max-width:700px; margin:0 auto;">
-        Didirikan pada 2025, Nerver Indo Roleplay hadir untuk memberikan pengalaman roleplay berkualitas tinggi di Indonesia.
-        Kami menggabungkan sistem modern, aturan ketat, dan dukungan teknis 24/7 demi menjaga kualitas permainan.
-      </p>
+      <div class="section-header">
+        <h2 class="section-title">Tentang Kami</h2>
+        <p class="section-subtitle">
+          Didirikan pada 2025, Nerver Indo Roleplay hadir untuk memberikan pengalaman roleplay berkualitas tinggi di Indonesia.
+        </p>
+      </div>
     </div>
   </section>
 
   <!-- Fitur -->
-  <section id="features">
+  <section id="features" class="fade-in">
     <div class="container">
-      <h2 class="section-title">Fitur Unggulan</h2>
-      <div class="cards">
+      <div class="section-header">
+        <h2 class="section-title">Fitur Unggulan</h2>
+        <p class="section-subtitle">
+          Sistem modern, aman, dan dirancang untuk pengalaman roleplay terbaik.
+        </p>
+      </div>
+
+      <div class="grid">
         <div class="card">
-          <i class="fas fa-shield-alt"></i>
-          <h3>Anti-Cheat</h3>
-          <p>Sistem proteksi canggih melawan cheat, exploit, dan macro.</p>
+          <div class="card-icon"><i class="fas fa-shield-alt"></i></div>
+          <h3>Anti-Cheat Canggih</h3>
+          <p>Proteksi real-time terhadap cheat, exploit, dan script ilegal.</p>
         </div>
         <div class="card">
-          <i class="fas fa-sync-alt"></i>
-          <h3>Real-Time Sync</h3>
-          <p>Data karakter, inventaris, dan ekonomi selalu aman dan sinkron.</p>
+          <div class="card-icon"><i class="fas fa-database"></i></div>
+          <h3>Data Terjamin</h3>
+          <p>Semua karakter dan aset tersimpan aman 24/7.</p>
         </div>
         <div class="card">
-          <i class="fab fa-whatsapp"></i>
+          <div class="card-icon"><i class="fab fa-whatsapp"></i></div>
           <h3>Komunitas Aktif</h3>
           <p><a href="https://chat.whatsapp.com/CVmKiCAgCDk7XPD3KOqQBV" target="_blank">Grup WhatsApp Resmi</a></p>
         </div>
       </div>
 
-      <div class="status-bar">
-        <div class="status-item"><span class="dot"></span> Server Online</div>
+      <div class="status">
+        <div class="status-item"><span class="status-dot"></span> Online</div>
         <div class="status-item">IP: <strong>152.42.220.33:2000</strong></div>
         <div class="status-item">Versi: SA-MP 0.3.7</div>
       </div>
@@ -318,39 +385,52 @@
   </section>
 
   <!-- Bergabung -->
-  <section id="join">
+  <section id="join" class="fade-in">
     <div class="container">
-      <h2 class="section-title">Cara Bergabung</h2>
-      <div class="cards">
+      <div class="section-header">
+        <h2 class="section-title">Cara Bergabung</h2>
+        <p class="section-subtitle">
+          Ikuti langkah sederhana ini untuk mulai bermain di Nerver Indo Roleplay.
+        </p>
+      </div>
+
+      <div class="grid">
         <div class="card">
-          <i class="fas fa-download"></i>
+          <div class="card-icon"><i class="fas fa-download"></i></div>
           <h3>Instal Game</h3>
-          <p>Gunakan SA-MP 0.3.7 + GTA San Andreas original.</p>
+          <p>SA-MP 0.3.7 + GTA San Andreas original.</p>
         </div>
         <div class="card">
-          <i class="fas fa-sign-in-alt"></i>
+          <div class="card-icon"><i class="fas fa-sign-in-alt"></i></div>
           <h3>Masukkan IP</h3>
           <p><code>152.42.220.33:2000</code></p>
         </div>
         <div class="card">
-          <i class="fas fa-copy"></i>
+          <div class="card-icon"><i class="fas fa-copy"></i></div>
           <h3>Salin IP</h3>
-          <button id="copyBtn" class="btn" style="padding:8px 20px; font-size:0.95rem; margin-top:10px;">Salin IP</button>
+          <button id="copyBtn" class="btn" style="padding:10px 24px; font-size:0.95rem; margin-top:12px;">Salin</button>
         </div>
       </div>
-      <div style="text-align:center; margin-top:40px;">
-        <a href="https://wa.me/6285191923519" class="btn">Hubungi Admin</a>
+
+      <div style="text-align: center; margin-top: 50px;">
+        <a href="https://wa.me/6285191923519" class="btn">
+          <i class="fab fa-whatsapp"></i> Hubungi Admin
+        </a>
       </div>
     </div>
   </section>
 
   <!-- Kontak -->
-  <section id="contact">
+  <section id="contact" class="fade-in">
     <div class="container">
-      <h2 class="section-title">Kontak</h2>
-      <p style="text-align:center; color:var(--text-muted);">
-        Ingin bertanya atau butuh bantuan?<br>
-        <a href="https://wa.me/6285191923519" style="color:var(--blue-light); font-weight:600;">
+      <div class="section-header">
+        <h2 class="section-title">Kontak Admin</h2>
+        <p class="section-subtitle">
+          Butuh bantuan? Kami siap membantu 24/7.
+        </p>
+      </div>
+      <p style="text-align: center; color: var(--gray); font-size: 1.1rem;">
+        <a href="https://wa.me/62851923519" style="color: var(--cyan); font-weight: 600;">
           +62 851-9192-3519
         </a>
       </p>
@@ -364,14 +444,23 @@
   </footer>
 
   <script>
-    // Smooth Scroll & Active Nav
+    // Fade-in on scroll
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) entry.target.classList.add('visible');
+      });
+    }, { threshold: 0.1 });
+
+    document.querySelectorAll('.fade-in').forEach(el => observer.observe(el));
+
+    // Smooth scroll
     document.querySelectorAll('a[href^="#"]').forEach(link => {
       link.addEventListener('click', function(e) {
         e.preventDefault();
         const target = document.querySelector(this.getAttribute('href'));
         if (target) {
           window.scrollTo({
-            top: target.offsetTop - 80,
+            top: target.offsetTop - 90,
             behavior: 'smooth'
           });
         }
@@ -385,29 +474,33 @@
         await navigator.clipboard.writeText(ip);
         const btn = document.getElementById('copyBtn');
         const original = btn.textContent;
-        btn.textContent = 'Disalin!';
-        setTimeout(() => btn.textContent = original, 2000);
+        btn.textContent = '✓ Disalin!';
+        btn.style.background = 'linear-gradient(90deg, #00c853, #64dd17)';
+        setTimeout(() => {
+          btn.textContent = original;
+          btn.style.background = 'linear-gradient(90deg, var(--blue), var(--cyan))';
+        }, 2000);
       } catch (err) {
-        alert('Gagal menyalin. Silakan salin manual: ' + ip);
+        alert('Gagal menyalin. Salin manual: ' + ip);
       }
     });
 
-    // Nav active on scroll (optional)
+    // Active nav highlight
     window.addEventListener('scroll', () => {
-      const sections = document.querySelectorAll('section');
-      const navLinks = document.querySelectorAll('nav a');
-      let current = '';
-      sections.forEach(section => {
-        const sectionTop = section.offsetTop;
-        const sectionHeight = section.clientHeight;
-        if (pageYOffset >= sectionTop - 100) {
-          current = section.getAttribute('id');
-        }
-      });
-      navLinks.forEach(link => {
-        link.classList.remove('active');
-        if (link.getAttribute('href') === `#${current}`) {
-          link.classList.add('active');
+      const sections = ['home', 'about', 'features', 'join', 'contact'];
+      const scrollPos = window.scrollY + 100;
+
+      sections.forEach(id => {
+        const section = document.getElementById(id);
+        const navLink = document.querySelector(`nav a[href="#${id}"]`);
+        if (!section || !navLink) return;
+
+        const offsetTop = section.offsetTop;
+        const offsetBottom = offsetTop + section.offsetHeight;
+
+        if (scrollPos >= offsetTop && scrollPos < offsetBottom) {
+          document.querySelectorAll('nav a').forEach(a => a.classList.remove('active'));
+          navLink.classList.add('active');
         }
       });
     });
